// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 10 days, return items based on current rules   1`] = `
[
  {
    "name": "+5 Dexterity Vest",
    "quality": 8,
    "sellIn": -1,
  },
  {
    "name": "Aged Brie",
    "quality": 20,
    "sellIn": -9,
  },
  {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -6,
  },
  {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 38,
    "sellIn": 4,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -1,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -6,
  },
]
`;

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 30 days, return items based on current rules   1`] = `
[
  {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sellIn": -21,
  },
  {
    "name": "Aged Brie",
    "quality": 50,
    "sellIn": -29,
  },
  {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -26,
  },
  {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -16,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -21,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -26,
  },
]
`;

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 40 days, return items based on current rules   1`] = `
[
  {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sellIn": -31,
  },
  {
    "name": "Aged Brie",
    "quality": 50,
    "sellIn": -39,
  },
  {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -36,
  },
  {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -26,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -31,
  },
  {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -36,
  },
]
`;
